# libmanabu

./: .gitignore  CMakeLists.txt  README.md  manabuConfig.cmake
include/manabu/: personal_attributes.h  version.h
spec/: CMakeLists.txt  libmanabu_spec.cpp
src/: libmanabu.cpp  libmanabu.h  manabu.cpp  manabu.h  version.h.in
src/manabu/: authenticator.cpp  authenticator.h  student.cpp  student.h  transactor.cpp  transactor.h
